Fixed spacing between button and images

--- a/src/components/slices/faculty-grid.module.scss
+++ b/src/components/slices/faculty-grid.module.scss
@@ -1,20 +1,20 @@
 @import '../../base/module';
 
 .FacultyGrid {
-  position: relative;
   padding-top: 0;
   background-color: white;
 }
 
+.imageSection {
+  margin-top: -165px;
+  @media (min-width: $tablet) {
+    margin-top: -285px;
+  }
+}
 .photoContainer {
   display: flex;
   gap: 30px;
   flex-direction: column;
-  position: relative;
-  top: -165px;
-  @media (min-width: $tablet) {
-    top: -285px;
-  }
 }
 
 .headImage {
@@ -73,9 +73,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5px;
+  margin-bottom: 20px;
   @media (min-width: $tablet) {
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
+    margin-bottom: 40px;
   }
 }
 
@@ -143,8 +145,8 @@
 }
 
 .viewWorkButton {
-  min-width: 250px;
-  height: 65px;
+  min-width: 240px;
+  height: 45px;
   background: $color-orange;
   font-family: $font-secondary;
   font-weight: 600;
@@ -156,6 +158,7 @@
   margin: 0 auto;
   @media (min-width: $tablet) {
     min-width: 296px;
+    height: 65px;
   }
 }
 
